# DCPUToolchain

./: .gitignore  .gitmodules  .hgignore  0x01c.sln  0x10c.sln  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AUTHORS.txt  CMakeLists.txt  MIT-LICENSE.txt  README.md  README.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  kernel.dcpu16  package.bat  toolchain.sln
compiler/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Main.cpp  asmgen.cpp  asmgen.h  asmtypes.cpp  asmtypes.h  bootstrap.asm  compiler.sln  compiler.vcxproj  compiler.vcxproj.filters  lexer.c  lexer.cpp  lexer.l  main.cpp  node.cpp  node.h  parser.c  parser.cpp  parser.h  parser.hpp  parser.y  pp.c  pp.h  screen.m  test.c  test.dasm16
compiler/nodes/: Lists.h  NAddressOfOperator.cpp  NAddressOfOperator.h  NAssemblyStatement.cpp  NAssemblyStatement.h  NAssignment.cpp  NAssignment.h  NBinaryOperator.cpp  NBinaryOperator.h  NBlock.cpp  NBlock.h  NCharacter.cpp  NCharacter.h  NDebugStatement.cpp  NDebugStatement.h  NDeclaration.h  NDeclarations.cpp  NDeclarations.h  NDereferenceOperator.cpp  NDereferenceOperator.h  NExpression.h  NExpressionStatement.cpp  NExpressionStatement.h  NForStatement.cpp  NForStatement.h  NFunctionDeclaration.cpp  NFunctionDeclaration.h  NFunctionPointerType.h  NFunctionSignature.cpp  NFunctionSignature.h  NIdentifier.cpp  NIdentifier.h  NIfStatement.cpp  NIfStatement.h  NInteger.cpp  NInteger.h  NMethodCall.cpp  NMethodCall.h  NReturnStatement.cpp  NReturnStatement.h  (+16 more)
ddb/: CMakeLists.txt  main.c  packets.c  packets.h  sdp.c  sdp.h
docs/: CMakeLists.txt  Doxyfile.in  conf.py.in  index.rst  test.rst
docs/sources/: index.rst  (+2 more)
dtasm/: CMakeLists.txt  aerr.c  aerr.h  aout.c  aout.h  assem.c  assem.h  lexer.l  main.c  parser.y  textn.c  treloc.c
dtcc/: CMakeLists.txt  bootstrap.asm  main.cpp
dtdb/: CMakeLists.txt  main.c  packets.c  packets.h  sdp.c  sdp.h
dtdb-gui/: CMakeLists.txt  dtdb.ui  dtdbrunner.cpp  dtdbrunner.h  main.cpp  mainwindow.cpp  mainwindow.h
dtemu/: CMakeLists.txt  main.c
dtide/: API.txt  Backends.cpp  Backends.h  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  DTIDE.cpp  DTIDE.h  DTIDEBuildAPI.cpp  DTIDEBuildAPI.h  DTIDEDebuggingSession.cpp  DTIDEDebuggingSession.h  DTIDEDebuggingWindow.cpp  DTIDEDebuggingWindow.h  DTIDEDirView.cpp  DTIDEDirView.h  DTIDEGLWidget.cpp  DTIDEGLWidget.h  DTIDEGLWidgets.cpp  DTIDEGLWidgets.h  DTIDEHighlighting.cpp  DTIDEHighlighting.h  DTIDERegisters.cpp  DTIDERegisters.h  DTIDESplash.cpp  DTIDESplash.h  DTIDETabWidget.cpp  DTIDETabWidget.h  DTIDEXMLProject.cpp  DTIDEXMLProject.h  Project.cpp  Project.h  backends.cpp  backends.h  codeeditor.cpp  codeeditor.h  dtidebuildapi.cpp  dtidebuildapi.h  dtidehighlighting.cpp  dtidehighlighting.h  (+9 more)
dtld/: CMakeLists.txt  ldbin.c  ldbin.h  ldbins.c  ldbins.h  ldconv.c  ldconv.h  ldlua.c  ldlua.h  ldtarget.h  main.c
dtlua/: CMakeLists.txt  lua.c
dtmm/: CMakeLists.txt  main.c
dtpolicy/: CMakeLists.txt  main.c
dtpp/: CMakeLists.txt  main.c
emulator/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  console.dcpu16  copy.bat  dcpu.c  dcpu.cpp  dcpu.h  dcpubase.c  dcpubase.cpp  dcpubase.h  dcpuhook.c  dcpuhook.h  dcpuops.c  dcpuops.cpp  dcpuops.h  dcpuscrn.c  dcpuscrn.cpp  dcpuscrn.h  emulator-postbuild.bat  emulator.sln  emulator.vcxproj  emulator.vcxproj.filters  hw.c  hw.h  hwio.c  hwio.h  hwioascii.c  hwioascii.h  hwtimer.c  hwtimer.h  lem1802.c  lem1802.h  main.c  main.cpp  notch.dcpu16  test.dcpu16
json-test/: CMakeLists.txt  main.c
kernel/: CMakeLists.txt  README.md  compile.sh  dcpu.cmake  test.sh
libdcpu/: CMakeLists.txt  bfile.c  bfile.h  bstring.c  bstring.h  class.h  config.h.in  dcpu.h  debug.c  debug.h  derr.c  derr.h  dirent.h  dirent.portable.h  dirent_old.h  err.d  iio.c  iio.h  imap.c  imap.h  lexfix.h  luaglob.h  osutil.c  osutil.h  posix.h  rparse.c  rparse.h  version.c  version.h
libdcpu-ci-dbgfmt/: CMakeLists.txt  ddata.c  ddata.h
libdcpu-ci-lang/: AsmBlock.c  AsmBlock.cpp  AsmBlock.h  AsmGenerator.c  AsmGenerator.cpp  AsmGenerator.h  Assembler.c  Assembler.cpp  Assembler.h  CMakeLists.txt  CompilerException.h  ErrorList.cpp  ErrorList.h  StackFrame.c  StackFrame.cpp  StackFrame.h  StackMap.h  SymbolObject.cpp  SymbolObject.h  SymbolTable.cpp  SymbolTable.h  SymbolTableScope.cpp  SymbolTableScope.h  SymbolTypes.h  TypePosition.c  TypePosition.cpp  TypePosition.h
libdcpu-ci-lang-c/: CMakeLists.txt  lexer.cpp  lexer.l  parser.cpp  parser.hpp  parser.y
libdcpu-ci-objfmt/: CMakeLists.txt  ldata.c  ldata.h  lprov.c  lprov.h  objfile.c  objfile.h
libdcpu-ld/: CMakeLists.txt  ccregistercall.c  ccregistercall.h  ccregisterdirect.c  ccregisterdirect.h  ccstackcall.c  ccstackcall.h  ldbin.c  ldbin.h  ldbins.c  ldbins.h  ldcall.c  ldcall.h  ldconv.c  ldconv.h  ldlua.c  ldpolicy.c  ldpolicy.h  ldtarget.h
libdcpu-ld-policy/: CMakeLists.txt  lexer.l  parser.y  policy.c  policy.h  policyast.h  policyexec.c  policyexec.h  policyfree.c  policyfree.h
libdcpu-pp/: CMakeLists.txt  dummy.c  lexer.l  parser.y  pp.c  pp.h  ppcompat.c  ppcompat.h  ppfind.c  ppfind.h  ppimpl.c  ppimpl.h  ppimpl_test.c  ppimpl_test.h  pplua.c  pplua.h  ppparam.h  ppparamlexer.l  ppparamparser.y
libdcpu-pp-expr/: CMakeLists.txt  lexer.l  parser.y  ppexpr.c  ppexpr.h  ppexprlua.c  ppexprlua.h
libdcpu-vm/: CMakeLists.txt  GLFWutils.c  dcpu.c  dcpubase.c  dcpubase.h  dcpudis.c  dcpudis.h  dcpuexec.c  dcpuexec.h  dcpuhook.c  dcpuhook.h  dcpuops.c  dcpuops.h  embedfont.c  glfwutils.c  glfwutils.h  hw.c  hw.h  hwclock.c  hwclock.h  hwio.c  hwio.h  hwioascii.c  hwioascii.h  hwkeyboard.c  hwkeyboard.h  hwlem1802.c  hwlem1802.h  hwlem1802mem.c  hwlem1802mem.h  hwlem1802util.c  hwlem1802util.h  hwlua.c  hwlua.h  hwluacpu.c  hwluacpu.h  hwm35fd.c  hwm35fd.h  hwsped3.c  hwsped3.h  (+8 more)
libdcpu-vm-dbg/: CMakeLists.txt  aux.c  aux.h  backtrace.c  backtrace.h  breakpoint.c  breakpoint.h  dbgaux.c  dbgaux.h  dbglua.c  dbglua.h  dummy.c  lexer.l  parser.y
libdcpu-vm-python/: CMakeLists.txt  dcpu.pxd  dcpu.pyx  setup.py
(+497 files in other folders)
